--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ anyhow = "1.0"
 ringbuf = "0.4.1"
 clap = { version = "4.0", features = ["derive"] }
 cpal = "0.15.3"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+tracing = "0.1.41"
