--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
+    - name: Format
+      run: cargo fmt --all -- --check --verbose
+    - name: Run Clippy
+      run: cargo clippy --all-targets --all-features -- -D warnings --verbose
     - name: Run tests
       run: cargo test --verbose
