--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ cpal = "0.15.3"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tracing = "0.1.41"
 ctrlc = "3.4.5"
+
+[lints.clippy]
+panic = "warn"
+unwrap_used = "warn"
+expect_used = "warn"
